--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -150,65 +150,57 @@ legend { width: inherit; padding: 0 10px; border-bottom: none;
 }*/
 /* Search */
 /* line 2, ../../scss/system/widget.scss */
-.widget_search { position: fixed; left: 50px; color: #ffffff; font-size: 16px; margin: 0; display: flex; align-items: start; height: 48px; padding: 12px; }
+.widget_search { color: #ffffff; font-size: 16px; margin: 0; display: flex; align-self: flex-start; width: 60%; position: absolute; right: 108px; height: 40px; }
 /* line 13, ../../scss/system/widget.scss */
-.widget_search .button_open { position: absolute; right: -20px; cursor: pointer; z-index: 2; transition: all .4s ease-out; }
-/* line 22, ../../scss/system/widget.scss */
-.widget_search .button_close { display: none; position: absolute; right: -25px; cursor: pointer; z-index: 1; }
-/* line 30, ../../scss/system/widget.scss */
-.widget_search input { display: none; position: relative; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: 0; color: #ffffff; }
-@media (max-width: 599px) { /* line 30, ../../scss/system/widget.scss */
-  .widget_search input { width: 100%; } }
-@media (min-width: 600px) { /* line 30, ../../scss/system/widget.scss */
-  .widget_search input { width: 50%; right: -50%; } }
-/* line 48, ../../scss/system/widget.scss */
+.widget_search .button_open { cursor: pointer; position: absolute; right: 0; -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; }
+/* line 24, ../../scss/system/widget.scss */
+.widget_search input { display: none; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: none; color: #ffffff; position: relative; right: 48px; width: 100%; margin-left: 48px; }
+/* line 36, ../../scss/system/widget.scss */
 .widget_search input:focus { outline: none; }
+/* line 41, ../../scss/system/widget.scss */
+.widget_search .button_close { display: none; cursor: pointer; position: absolute; right: 0; }
+/* line 48, ../../scss/system/widget.scss */
+.widget_search .animate { right: 100%; }
 @media (max-width: 599px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 130px; }
-  /* line 55, ../../scss/system/widget.scss */
-  .widget_search .animate { right: 100%; } }
-@media (min-width: 600px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 140px; }
-  /* line 62, ../../scss/system/widget.scss */
-  .widget_search .animate { right: 51%; } }
+  .widget_search { right: 100px; } }
 
 /* Date picker */
-/* line 69, ../../scss/system/widget.scss */
+/* line 58, ../../scss/system/widget.scss */
 .widget_datePicker_back { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: #000000; opacity: 0.5; z-index: 20; }
 
-/* line 80, ../../scss/system/widget.scss */
+/* line 69, ../../scss/system/widget.scss */
 .widget_datePicker { display: none; position: fixed; top: 5%; left: 0; right: 0; margin-right: auto; margin-left: auto; padding: 0px; border-radius: 2px; border-top: none; border-bottom: none; width: 310px; background-color: #ffffff; z-index: 21; }
-/* line 96, ../../scss/system/widget.scss */
+/* line 85, ../../scss/system/widget.scss */
 .widget_datePicker .header { height: 55px; padding: 20px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-left-radius: 0px; }
-/* line 103, ../../scss/system/widget.scss */
+/* line 92, ../../scss/system/widget.scss */
 .widget_datePicker .header p { margin: 0; opacity: 0.7; cursor: pointer; }
-/* line 110, ../../scss/system/widget.scss */
+/* line 99, ../../scss/system/widget.scss */
 .widget_datePicker .listYears { display: none; height: 345px; overflow-y: scroll; }
-/* line 115, ../../scss/system/widget.scss */
+/* line 104, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list { overflow: hidden; padding: 0; margin: 0; }
-/* line 120, ../../scss/system/widget.scss */
+/* line 109, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul { padding: 0; margin: 0; }
-/* line 124, ../../scss/system/widget.scss */
+/* line 113, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul .mdc-list-item { display: block; text-align: center; line-height: 42px; height: 42px; }
-/* line 134, ../../scss/system/widget.scss */
+/* line 123, ../../scss/system/widget.scss */
 .widget_datePicker .month { margin: 0; padding: 0; text-align: center; height: 37px; }
-/* line 140, ../../scss/system/widget.scss */
+/* line 129, ../../scss/system/widget.scss */
 .widget_datePicker .month div { display: inline-block; }
-/* line 144, ../../scss/system/widget.scss */
+/* line 133, ../../scss/system/widget.scss */
 .widget_datePicker .month .label { width: 180px; }
-/* line 148, ../../scss/system/widget.scss */
+/* line 137, ../../scss/system/widget.scss */
 .widget_datePicker .month .material-icons { position: relative; top: 8px; width: 48px; cursor: pointer; }
-/* line 156, ../../scss/system/widget.scss */
+/* line 145, ../../scss/system/widget.scss */
 .widget_datePicker .week ul { margin: 0; padding: 0; text-align: center; }
-/* line 161, ../../scss/system/widget.scss */
+/* line 150, ../../scss/system/widget.scss */
 .widget_datePicker .week ul li { position: relative; display: inline-block; border-radius: 50%; width: 42px; height: 42px; line-height: 42px; opacity: 0.5; font-size: 12px; }
-/* line 173, ../../scss/system/widget.scss */
+/* line 162, ../../scss/system/widget.scss */
 .widget_datePicker .day ul { margin: 0; padding: 0; text-align: center; }
-/* line 178, ../../scss/system/widget.scss */
+/* line 167, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li { position: relative; display: inline-block; width: 42px; height: 42px; line-height: 42px; font-size: 11px; }
-/* line 186, ../../scss/system/widget.scss */
+/* line 175, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li span { display: inline-block; width: 32px; height: 32px; line-height: 32px; cursor: pointer; border-radius: 50%; }
-/* line 197, ../../scss/system/widget.scss */
+/* line 186, ../../scss/system/widget.scss */
 .widget_datePicker .button { text-align: right; padding: 10px; }
 
 /*$spaceBottom: 120px;
@@ -429,80 +421,94 @@ p { margin: 0;
 }
 #page_menu_sort, #module_position_sort { position: relative;  div { position: absolute; top: -105px; left: 50%; width: 50px; }
 }*/
-/* line 1013, ../../scss/system/basic.scss */
-:root { --mdc-theme-primary: #1976d2; --mdc-theme-on-primary: #ffffff; --mdc-theme-secondary: #d50000; --mdc-theme-on-secondary: #ffffff; --mdc-theme-background: #ffffff; --mdc-theme-surface: #ffffff; --mdc-theme-on-surface: #ffffff; }
+@media (max-width: 839px) { /* line 1013, ../../scss/system/basic.scss */
+  .main .sortable_column { padding-top: 55px !important; } }
+@media (max-width: 599px) { /* line 1020, ../../scss/system/basic.scss */
+  .main .sortable_column { padding-top: 45px !important; } }
+/* line 1028, ../../scss/system/basic.scss */
+:root { --mdc-theme-primary: #1976d2; --mdc-theme-on-primary: #ffffff; --mdc-theme-secondary: #d50000; --mdc-theme-on-secondary: #ffffff; --mdc-theme-background: #ffffff; --mdc-theme-surface: #ffffff; --mdc-theme-on-surface: #868686; }
 
-/* line 1026, ../../scss/system/basic.scss */
+/* line 1041, ../../scss/system/basic.scss */
 ::placeholder { color: #ffffff; opacity: 1; }
 
-/* line 1030, ../../scss/system/basic.scss */
+/* line 1045, ../../scss/system/basic.scss */
 :-ms-input-placeholder { color: #ffffff; }
 
-/* line 1033, ../../scss/system/basic.scss */
+/* line 1048, ../../scss/system/basic.scss */
 ::-ms-input-placeholder { color: #ffffff; }
 
-/* line 1037, ../../scss/system/basic.scss */
-html, body { margin: 0; padding: 0; }
+/* line 1052, ../../scss/system/basic.scss */
+.mdc-top-app-bar { z-index: 1; }
+/* line 1055, ../../scss/system/basic.scss */
+.mdc-top-app-bar .mdc-top-app-bar__row { -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
 
-/* line 1042, ../../scss/system/basic.scss */
-html { height: 100%; }
+/* line 1066, ../../scss/system/basic.scss */
+.mdc-top-app-bar_shrink { height: 64px !important; }
 
-/* line 1045, ../../scss/system/basic.scss */
-body { position: relative; min-height: 100%; }
-
-/* line 1050, ../../scss/system/basic.scss */
-main { padding-bottom: 80px; }
-
-/*.mdc-toolbar-fixed-adjust { margin-top: 200px;
-}
-.mdc-toolbar__row--with-image { &:first-child::after { background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
-}*/
-/* line 1065, ../../scss/system/basic.scss */
+/* line 1070, ../../scss/system/basic.scss */
 .mdc-button { margin-top: 5px; }
-/* line 1068, ../../scss/system/basic.scss */
+/* line 1073, ../../scss/system/basic.scss */
 .mdc-button i { margin-top: -2px; }
 
-/* line 1075, ../../scss/system/basic.scss */
-.page_container .header h1 { margin: 0; }
+/* line 1078, ../../scss/system/basic.scss */
+.mdc-tab-bar { margin: 0; }
 
-/* line 1081, ../../scss/system/basic.scss */
+/* line 1082, ../../scss/system/basic.scss */
+html, body { margin: 0; padding: 0; }
+
+/* line 1087, ../../scss/system/basic.scss */
+html { height: 100%; }
+
+/* line 1090, ../../scss/system/basic.scss */
+body { position: relative; min-height: 100%; }
+
+/* line 1096, ../../scss/system/basic.scss */
+.main .sortable_column { padding-top: 120px; padding-bottom: 80px; }
+
+/* line 1102, ../../scss/system/basic.scss */
 .footer { display: flex; justify-content: center; flex-direction: column; text-align: center; position: absolute; bottom: 0; width: 100%; height: 80px; }
-/* line 1094, ../../scss/system/basic.scss */
+/* line 1114, ../../scss/system/basic.scss */
 .footer .icon div { display: inline-block; margin: 5px 10px; }
-/* line 1101, ../../scss/system/basic.scss */
+/* line 1121, ../../scss/system/basic.scss */
 .footer .text p { margin: 0; font-size: 12px; }
 
-/* line 1108, ../../scss/system/basic.scss */
+/* line 1128, ../../scss/system/basic.scss */
 .module, .module_clean { padding: 5px; overflow: hidden; /*.mdc-text-field_hidden_fix { display: block !important; margin: 0 !important; height: 0 !important;
 }*/ }
-/* line 1112, ../../scss/system/basic.scss */
+/* line 1132, ../../scss/system/basic.scss */
 .module .settings, .module_clean .settings { display: none; }
-/* line 1116, ../../scss/system/basic.scss */
+/* line 1136, ../../scss/system/basic.scss */
 .module .drag, .module_clean .drag { display: none; }
-/* line 1121, ../../scss/system/basic.scss */
+/* line 1141, ../../scss/system/basic.scss */
 .module .title i, .module .title h1, .module_clean .title i, .module_clean .title h1 { display: inline-block; vertical-align: middle; margin: 0; }
-/* line 1128, ../../scss/system/basic.scss */
+/* line 1148, ../../scss/system/basic.scss */
 .module .mdc-card__actions, .module_clean .mdc-card__actions { padding: 0 !important; min-height: auto !important; }
-/* line 1134, ../../scss/system/basic.scss */
+/* line 1154, ../../scss/system/basic.scss */
 .module .textField_group .mdc-text-field, .module .textField_group .mdc-text-field--box, .module .textField_group .mdc-text-field--outlined, .module_clean .textField_group .mdc-text-field, .module_clean .textField_group .mdc-text-field--box, .module_clean .textField_group .mdc-text-field--outlined { margin-top: 8px; margin-bottom: 0; }
-/* line 1140, ../../scss/system/basic.scss */
+/* line 1160, ../../scss/system/basic.scss */
 .module .textField_group .mdc-text-field__basic .mdc-floating-label, .module_clean .textField_group .mdc-text-field__basic .mdc-floating-label { padding-left: 28px; }
-/* line 1146, ../../scss/system/basic.scss */
+/* line 1166, ../../scss/system/basic.scss */
 .module .textField_group .mdc-text-field__basic .material-icons, .module .textField_group .mdc-text-field__basicTrailing .material-icons, .module_clean .textField_group .mdc-text-field__basic .material-icons, .module_clean .textField_group .mdc-text-field__basicTrailing .material-icons { margin-bottom: 5px; }
-/* line 1151, ../../scss/system/basic.scss */
+/* line 1171, ../../scss/system/basic.scss */
 .module .textField_group .mdc-select, .module_clean .textField_group .mdc-select { height: 48px; }
 
-/* line 1163, ../../scss/system/basic.scss */
+/* line 1183, ../../scss/system/basic.scss */
 .module { width: 100%; margin: auto; border: 1px solid #dadada; background-color: #ececec; }
-/* line 1169, ../../scss/system/basic.scss */
+/* line 1189, ../../scss/system/basic.scss */
 .module .title { border-bottom: 1px solid #dadada; }
 
-/* line 1174, ../../scss/system/basic.scss */
-.menu_registration { list-style-type: none; margin: 0; padding: 0; }
-/* line 1179, ../../scss/system/basic.scss */
-.menu_registration li { display: inline-block; }
+/* line 1196, ../../scss/system/basic.scss */
+.page_container .header h1 { margin: 0; }
 
-/* line 1192, ../../scss/system/basic.scss */
-#panel_id_2 .container_link a { display: block; text-decoration: none !important; }
+/* line 1207, ../../scss/system/basic.scss */
+#panel_id_2 .form_user_authentication .container_submit button { margin-top: 0; width: 100%; }
+/* line 1214, ../../scss/system/basic.scss */
+#panel_id_2 p { margin: 0; }
+/* line 1219, ../../scss/system/basic.scss */
+#panel_id_2 .container_buttons a { width: 100%; }
+/* line 1224, ../../scss/system/basic.scss */
+#panel_id_2 .container_links { margin-top: 5px; text-align: center; }
+/* line 1228, ../../scss/system/basic.scss */
+#panel_id_2 .container_links a { display: block; text-decoration: none !important; }
 
 /*# sourceMappingURL=basic.css.map */
