--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -1,20 +1,20 @@
 {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-<div>
+<div class="page_container">
     {% if response.values.userId == null %}
-        <h3 class="margin_clear">{% trans %}recover_password_1{% endtrans %}</h3>
+        <h1 class="mdc-typography--headline6">{% trans %}recover_password_1{% endtrans %}</h1>
         <form id="form_recover_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.email, {'label': "recover_password_2", 'icon': "email"})}}
+            {{form_row(form.email, {'label': "recover_password_2", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "email"})}}
             
             {{form_widget(form._token)}}
             
-            {{form_widget(form.submit, {'label': "button_4"})}}
+            {{form_widget(form.submit, {'label': "button_4", 'dense': "", 'raised': ""})}}
         </form>
     {% else %}
-        <h3 class="margin_clear">{% trans %}recover_password_3{% endtrans %}</h3>
+        <h1 class="mdc-typography--headline6">{% trans %}recover_password_3{% endtrans %}</h1>
         <form id="form_change_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.password, {'label': "recover_password_4", 'icon': "linear_scale"})}}
-            {{form_row(form.passwordConfirm, {'label': "recover_password_5", 'icon': "linear_scale"})}}
+            {{form_row(form.password, {'label': "recover_password_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.passwordConfirm, {'label': "recover_password_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
             
             {{form_widget(form._token)}}
 
