--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/table_and_pagination.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/table_and_pagination.css
@@ -35,6 +35,16 @@
 /* line 76, ../scss/system/utility.scss */
 .align_right { text-align: right; }
 
+/*.button { -webkit-transform: scale(1) rotate(360deg); transform: scale(1) rotate(360deg); -webkit-transition: -webkit-transform 150ms cubic-bezier(.4, 0, 1, 1); transition: transform 150ms cubic-bezier(.4, 0, 1, 1);
+}
+.button:hover { -webkit-transition: box-shadow 150ms cubic-bezier(0, 0, .2, 1); transition: box-shadow 150ms cubic-bezier(0, 0, .2, 1);
+}
+.second-icon, .first-icon { left: 0; margin-left: 16px; margin-top: 16px; position: absolute; top: 0;  -webkit-transition: all .2s cubic-bezier(.4, 0, .2, 1); transition: all .2s cubic-bezier(.4, 0, .2, 1);
+}
+.second-icon, .button:hover .first-icon { opacity: 0;  -webkit-transform: rotate(225deg); transform: rotate(225deg);
+}
+.button:hover .second-icon { opacity: 1; visibility: visible;  -webkit-transform: rotate(360deg); transform: rotate(360deg);
+}*/
 /*html { position: relative; min-height: 100%;
 }
 
