--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/captcha.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/captcha.scss
@@ -1,10 +1,18 @@
 // Version 1.0.0
 
 .captcha {
-    text-align: left;
+    text-align: center;
+    
+    .mdc-text-field {
+        height: 35px !important;
+        
+        .mdc-text-field__input {
+            padding-top: 0 !important;
+        }
+    }
     
     img {
+        cursor: pointer;
         vertical-align: middle;
-        border: 1px solid #000000;
     }
 }
