--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
@@ -1,6 +1,6 @@
 // Version 1.0.0
 
-#backdrop {
+/*#backdrop {
     position: fixed;
     top: 0;
     right: 0;
@@ -58,5 +58,62 @@
 #loader_request {
     img {
         border: 1px solid #000000;
+    }
+}*/
+
+$offset: 187;
+$duration: 1.4s;
+
+.loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    animation: rotator $duration linear infinite;
+    
+    .path {
+        stroke-dasharray: $offset;
+        stroke-dashoffset: 0;
+        transform-origin: center;
+        animation: dash $duration ease-in-out infinite, colors ($duration*4) ease-in-out infinite;
+    }
+}
+
+@keyframes rotator {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(270deg);
+    }
+}
+@keyframes colors {
+    0% {
+        stroke: #4285F4;
+    }
+    25% {
+        stroke: #DE3E35;
+    }
+    50% {
+        stroke: #F7C223;
+    }
+    75% {
+        stroke: #1B9A59;
+    }
+    100% {
+        stroke: #4285F4;
+    }
+}
+@keyframes dash {
+    0% {
+        stroke-dashoffset: $offset;
+    }
+    50% {
+        stroke-dashoffset: $offset/4;
+        transform:rotate(135deg);
+    }
+    100% {
+        stroke-dashoffset: $offset;
+        transform:rotate(450deg);
     }
 }
