--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/widget.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/widget.scss
@@ -5,7 +5,7 @@
     margin: 0;
     display: flex;
     align-self: flex-start;
-    width: 60%;
+    width: 58%;
     position: absolute;
     right: 108px;
     height: 40px;
@@ -83,6 +83,7 @@
     z-index: 21;
     
     .header {
+        position: relative;
         height: 55px;
         padding: 20px;
         border-top-left-radius: 2px;
@@ -93,6 +94,12 @@
             margin: 0;
             opacity: 0.7;
             cursor: pointer;
+        }
+        
+        .mdc-fab {
+            position: absolute;
+            top: 10px;
+            right: 10px;
         }
     }
     
