--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/loader.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/loader.html.twig
@@ -1,4 +1,3 @@
-<div id="loader">
-    <p class="text">{% trans %}loader_1{% endtrans %}</p>
-    <img class="image" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template_name'] ~ "/loader_loading.gif")}}" alt="loading.gif"/>
-</div>
+<svg class="loader" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+    <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+</svg>
